feat: init v1.2.0
upgrade